change tg auth endpoint POST to GET
